force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/Apttus_CMConfig__AgreementRelatedLineItem__c.object-meta.xml
<CustomObject>
    <description>Holds the relationships between agreement line items</description>
    <label>Agreement Related Line Item</label>
    <nameField>
        <displayFormat>RLI-{0000000000}</displayFormat>
        <label>Related Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Related Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>