force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__RelatedAssetLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__RelatedAssetLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related asset line item</description>
    <inlineHelpText>ID of the related asset line item</inlineHelpText>
    <label>Related Asset Line Item</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Related Agreement Line Items</relationshipLabel>
    <relationshipName>RelatedAgreementLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>