force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__RelatedEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__RelatedEndDate__c</fullName>
    <description>The end date associated with the related product/service</description>
    <inlineHelpText>The end date associated with the related product/service</inlineHelpText>
    <label>Related End Date</label>
    <type>Date</type>
</CustomField>