force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__RelatedLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__RelatedLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the related agreement line item</description>
    <inlineHelpText>ID of the related agreement line item</inlineHelpText>
    <label>Related Line Item</label>
    <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
    <relationshipLabel>Related Line Items (From)</relationshipLabel>
    <relationshipName>RelatedLineItemsFrom</relationshipName>
    <type>Lookup</type>
</CustomField>