force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__RelatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__RelatedQuantity__c</fullName>
    <description>The quantity associated with the related product/service</description>
    <inlineHelpText>The quantity associated with the related product/service</inlineHelpText>
    <label>Related Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>