force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__RelatedSellingTerm__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__RelatedSellingTerm__c</fullName>
    <description>The selling term associated with the related product/service</description>
    <inlineHelpText>The selling term associated with the related product/service</inlineHelpText>
    <label>Related Selling Term</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>