force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__WeightageAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__WeightageAmount__c</fullName>
    <description>The weightage amount</description>
    <inlineHelpText>The weightage amount</inlineHelpText>
    <label>Weightage Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>