force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__WeightageType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__WeightageType__c</fullName>
    <description>The weightage type</description>
    <inlineHelpText>The weightage type</inlineHelpText>
    <label>Weightage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>