force-app/main/default/objects/Apttus_CMConfig__AgreementRelatedLineItem__c/fields/Apttus_CMConfig__WeightedNetPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__WeightedNetPrice__c</fullName>
    <description>The weighted net price</description>
    <inlineHelpText>The weighted net price</inlineHelpText>
    <label>Weighted Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>